docs: Update docs

--- a/docs/latex/classoriginal_1_1algorithms.tex
+++ b/docs/latex/classoriginal_1_1algorithms.tex
@@ -181,97 +181,98 @@ requires Compare$<$Callback, TYPE$>$}\\static void \mbox{\hyperlink{classorigina
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires Compare$<$Callback, TYPE$>$}\\static void \mbox{\hyperlink{classoriginal_1_1algorithms_a2336bd54f1be8f54d604af00af47bfeb}{heap\+Init}} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&compares)
 \begin{DoxyCompactList}\small\item\em Initializes a heap structure from a range of iterators. \end{DoxyCompactList}\item 
-{\footnotesize template$<$typename TYPE$>$ }\\static auto \mbox{\hyperlink{classoriginal_1_1algorithms_a7429b9263df1b8ef70637640b6076253}{distance}} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin) -\/$>$ int64\+\_\+t
-\item 
+\Hypertarget{classoriginal_1_1algorithms_a7429b9263df1b8ef70637640b6076253}\label{classoriginal_1_1algorithms_a7429b9263df1b8ef70637640b6076253} 
+{\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries distance} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin) -\/$>$ int64\+\_\+t
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_a010a8ddaa398d21bec78234162f1ab46}{distance()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a47ffe601087e182a14ea394954dac3af}\label{classoriginal_1_1algorithms_a47ffe601087e182a14ea394954dac3af} 
 {\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries front\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it, int64\+\_\+t steps) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_a0bc1f932f07ab2b2ded2bd2e016c65fb}{front\+Of()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_abd70e7720964d8b717d83e53e08640e2}\label{classoriginal_1_1algorithms_abd70e7720964d8b717d83e53e08640e2} 
 {\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries back\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it, int64\+\_\+t steps) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_a9e0541500bd3c6a45eed385579fcffb5}{back\+Of()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a7ffa5d0460c406227a20e080c0f0d48d}\label{classoriginal_1_1algorithms_a7ffa5d0460c406227a20e080c0f0d48d} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\static auto {\bfseries all\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const Callback \&condition) -\/$>$ bool
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_ada4b03336a6bc356dd58fe52ae2e01b1}{all\+Of()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a5137fae536d1df994fc5085d828b43ca}\label{classoriginal_1_1algorithms_a5137fae536d1df994fc5085d828b43ca} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\static auto {\bfseries any\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const Callback \&condition) -\/$>$ bool
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_a1030ec11e298db67275e06a8b4e129a6}{any\+Of()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_ab66a408ac91ba687dcec6b1c315365cb}\label{classoriginal_1_1algorithms_ab66a408ac91ba687dcec6b1c315365cb} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\static auto {\bfseries none\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const Callback \&condition) -\/$>$ bool
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_af950ec05916d44c221231e150ce2abdb}{none\+Of()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a554c5e43b07f57e134ddd2c4e5195af8}\label{classoriginal_1_1algorithms_a554c5e43b07f57e134ddd2c4e5195af8} 
 {\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const TYPE \&target) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_a348b1a2155fc635e8e778bfdddf80574}{find()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a3f749360adc1137ff1434e559baf727c}\label{classoriginal_1_1algorithms_a3f749360adc1137ff1434e559baf727c} 
 {\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, uint32\+\_\+t n, const TYPE \&target) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_a348b1a2155fc635e8e778bfdddf80574}{find()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_ad787034ee30a8269f75de0acc088dbb3}\label{classoriginal_1_1algorithms_ad787034ee30a8269f75de0acc088dbb3} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\static auto {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const Callback \&condition) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_a348b1a2155fc635e8e778bfdddf80574}{find()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a239bf1777003999223ef8e9a2888832f}\label{classoriginal_1_1algorithms_a239bf1777003999223ef8e9a2888832f} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\static auto {\bfseries find} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, uint32\+\_\+t n, const Callback \&condition) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_a348b1a2155fc635e8e778bfdddf80574}{find()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a28cdea9a31195502a245c97fcd491397}\label{classoriginal_1_1algorithms_a28cdea9a31195502a245c97fcd491397} 
 {\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries count} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const TYPE \&target) -\/$>$ uint32\+\_\+t
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_afb7139d7ffff9543dd49c4b6c96b15ab}{count()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a97a530ea7e43e4c7b9d8e5cce7244c9c}\label{classoriginal_1_1algorithms_a97a530ea7e43e4c7b9d8e5cce7244c9c} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\static auto {\bfseries count} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const Callback \&condition) -\/$>$ uint32\+\_\+t
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_afb7139d7ffff9543dd49c4b6c96b15ab}{count()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_ab08e3e0e554e6286db1afebb51693694}\label{classoriginal_1_1algorithms_ab08e3e0e554e6286db1afebb51693694} 
 {\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries equal} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin2, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end2) -\/$>$ bool
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_a3ba26a44a05a202c4ae0259b2287b95e}{equal()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a57a7c0c09390a59656288361ae724abd}\label{classoriginal_1_1algorithms_a57a7c0c09390a59656288361ae724abd} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires \mbox{\hyperlink{conceptoriginal_1_1_operation}{original\+::\+Operation}}$<$Callback, TYPE$>$}\\static auto {\bfseries for\+Each} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, Callback operation) -\/$>$ void
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_aa2155ab479e061eb7ae6a4b4586ce970}{for\+Each()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a224b25f7c9b3f17e09c5314d1207ce4e}\label{classoriginal_1_1algorithms_a224b25f7c9b3f17e09c5314d1207ce4e} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires \mbox{\hyperlink{conceptoriginal_1_1_operation}{original\+::\+Operation}}$<$Callback, TYPE$>$}\\static auto {\bfseries for\+Each} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, uint32\+\_\+t n, Callback operation) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_aa2155ab479e061eb7ae6a4b4586ce970}{for\+Each()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a02fdf858287f2d23d77f9a618e06db64}\label{classoriginal_1_1algorithms_a02fdf858287f2d23d77f9a618e06db64} 
 {\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries fill} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const TYPE \&value) -\/$>$ void
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_a0c73c14858871484fac7fb868430edb3}{fill()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_aaf1457d1043f8cb134672f17e84b34c0}\label{classoriginal_1_1algorithms_aaf1457d1043f8cb134672f17e84b34c0} 
 {\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries fill} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, uint32\+\_\+t n, const TYPE \&value) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_a0c73c14858871484fac7fb868430edb3}{fill()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a4a5a9ee630bf2667e0dee6f0d0f9a138}\label{classoriginal_1_1algorithms_a4a5a9ee630bf2667e0dee6f0d0f9a138} 
 {\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries swap} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it2) noexcept -\/$>$ void
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_a78d5714e09e5a0564bb9e5c6ea2cfca4}{swap()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a5e4ec455963b895bbda841bbf173a7ed}\label{classoriginal_1_1algorithms_a5e4ec455963b895bbda841bbf173a7ed} 
 {\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries copy} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin\+\_\+tar) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_ad1d5ad2274fac8b34c48182cfad406e6}{copy()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a6dfb4d0810bcf43ff2ca2202124ff584}\label{classoriginal_1_1algorithms_a6dfb4d0810bcf43ff2ca2202124ff584} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition}}$<$Callback, TYPE$>$}\\static auto {\bfseries copy} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end\+\_\+src, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin\+\_\+tar, Callback condition) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_ad1d5ad2274fac8b34c48182cfad406e6}{copy()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_ab946814272f2fc5c9650fbc4c8cc069a}\label{classoriginal_1_1algorithms_ab946814272f2fc5c9650fbc4c8cc069a} 
 {\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries reverse} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_a5d6cd7b121c4a3b84e4f7264fdea3295}{reverse()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a660f6c4e37e61869faed4795b2a34f42}\label{classoriginal_1_1algorithms_a660f6c4e37e61869faed4795b2a34f42} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries compare} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it2, const Callback \&compares) -\/$>$ bool
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_ac9d0df0d454e332179deebc2a42f2492}{compare()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a4c8855328d884eee4237e39ca36d97ff}\label{classoriginal_1_1algorithms_a4c8855328d884eee4237e39ca36d97ff} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Adjust\+Down} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}current, const Callback \&compares) -\/$>$ void
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_ae9a4b125bd1e64db8e2eae368e94b013}{heap\+Adjust\+Down()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a91656931d4542088215d850184bba2fe}\label{classoriginal_1_1algorithms_a91656931d4542088215d850184bba2fe} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Adjust\+Up} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}current, const Callback \&compares) -\/$>$ void
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_a7d8ce5945945f02fa1b4095bbff19f0c}{heap\+Adjust\+Up()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a1830f8c29e9cab568ec403d9be9a5531}\label{classoriginal_1_1algorithms_a1830f8c29e9cab568ec403d9be9a5531} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Init} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const Callback \&compares) -\/$>$ void
-\item 
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_a2336bd54f1be8f54d604af00af47bfeb}{heap\+Init()} \end{DoxyCompactList}\item 
 \Hypertarget{classoriginal_1_1algorithms_a21fb5bca0873fba4f086ee1c8c2510d0}\label{classoriginal_1_1algorithms_a21fb5bca0873fba4f086ee1c8c2510d0} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
 requires \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Get\+Prior} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}parent, const Callback \&compares) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Pointer overload version of \doxylink{classoriginal_1_1algorithms_ab7c78e2079e69f94affe154ee6cd3493}{heap\+Get\+Prior()} \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsubsection*{Static Protected Member Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -534,7 +535,7 @@ uint32\+\_\+t The number of occurrences of target in the range
 \end{DoxyReturn}
 \Hypertarget{classoriginal_1_1algorithms_a010a8ddaa398d21bec78234162f1ab46}\index{original::algorithms@{original::algorithms}!distance@{distance}}
 \index{distance@{distance}!original::algorithms@{original::algorithms}}
-\doxysubsubsection{\texorpdfstring{distance()}{distance()}\hspace{0.1cm}{\footnotesize\ttfamily [1/2]}}
+\doxysubsubsection{\texorpdfstring{distance()}{distance()}}
 {\footnotesize\ttfamily \label{classoriginal_1_1algorithms_a010a8ddaa398d21bec78234162f1ab46} 
 template$<$typename TYPE$>$ \\
 static int64\+\_\+t original\+::algorithms\+::distance (\begin{DoxyParamCaption}\item[{const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&}]{end}{, }\item[{const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&}]{begin}{}\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [static]}}
@@ -558,14 +559,7 @@ Calculates distance between two iterators.
 \begin{DoxyReturn}{Returns}
 int64\+\_\+t Number of elements between begin and end (negative if reversed) 
 \end{DoxyReturn}
-\Hypertarget{classoriginal_1_1algorithms_a7429b9263df1b8ef70637640b6076253}\index{original::algorithms@{original::algorithms}!distance@{distance}}
-\index{distance@{distance}!original::algorithms@{original::algorithms}}
-\doxysubsubsection{\texorpdfstring{distance()}{distance()}\hspace{0.1cm}{\footnotesize\ttfamily [2/2]}}
-{\footnotesize\ttfamily \label{classoriginal_1_1algorithms_a7429b9263df1b8ef70637640b6076253} 
-template$<$typename TYPE$>$ \\
-static auto original\+::algorithms\+::distance (\begin{DoxyParamCaption}\item[{const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}}]{end}{, }\item[{const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}}]{begin}{}\end{DoxyParamCaption}) -\/$>$ int64\+\_\+t         \hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [static]}}
-
--\/--- Implementation of pointer overload version. -\/--- \Hypertarget{classoriginal_1_1algorithms_a3ba26a44a05a202c4ae0259b2287b95e}\index{original::algorithms@{original::algorithms}!equal@{equal}}
+\Hypertarget{classoriginal_1_1algorithms_a3ba26a44a05a202c4ae0259b2287b95e}\index{original::algorithms@{original::algorithms}!equal@{equal}}
 \index{equal@{equal}!original::algorithms@{original::algorithms}}
 \doxysubsubsection{\texorpdfstring{equal()}{equal()}}
 {\footnotesize\ttfamily \label{classoriginal_1_1algorithms_a3ba26a44a05a202c4ae0259b2287b95e} 
