--- a/docs/latex/original_8h.tex
+++ b/docs/latex/original_8h.tex
@@ -6,8 +6,7 @@ Main header file for Original.
 
 
 {\ttfamily \#include "{}core/core.\+h"{}}\newline
-Include dependency graph for original.\+h\+:
-\nopagebreak
+Include dependency graph for original.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
