--- a/docs/latex/cloneable_8h.tex
+++ b/docs/latex/cloneable_8h.tex
@@ -5,8 +5,7 @@
 Abstract base class for cloneable objects.  
 
 
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
