--- a/docs/latex/comparable_8h.tex
+++ b/docs/latex/comparable_8h.tex
@@ -13,8 +13,7 @@ Include dependency graph for comparable.\+h\+:\nopagebreak
 \includegraphics[width=193pt]{comparable_8h__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
