--- a/docs/latex/core_8h.tex
+++ b/docs/latex/core_8h.tex
@@ -41,8 +41,7 @@ Core module header file.
 {\ttfamily \#include "{}types.\+h"{}}\newline
 {\ttfamily \#include "{}vector.\+h"{}}\newline
 {\ttfamily \#include "{}wrapper.\+h"{}}\newline
-Include dependency graph for core.\+h\+:
-\nopagebreak
+Include dependency graph for core.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
