--- a/docs/latex/filter_stream_8h.tex
+++ b/docs/latex/filter_stream_8h.tex
@@ -7,8 +7,7 @@ Composite filter operations with logical chaining.
 
 {\ttfamily \#include "{}filter.\+h"{}}\newline
 {\ttfamily \#include "{}chain.\+h"{}}\newline
-Include dependency graph for filter\+Stream.\+h\+:
-\nopagebreak
+Include dependency graph for filter\+Stream.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
