docs: Update docs

--- a/docs/latex/tuple_8h.tex
+++ b/docs/latex/tuple_8h.tex
@@ -8,16 +8,14 @@ Heterogeneous tuple container implementation.
 {\ttfamily \#include "{}printable.\+h"{}}\newline
 {\ttfamily \#include "{}comparable.\+h"{}}\newline
 {\ttfamily \#include "{}types.\+h"{}}\newline
-Include dependency graph for tuple.\+h\+:
-\nopagebreak
+Include dependency graph for tuple.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{tuple_8h__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
