--- a/docs/latex/classoriginal_1_1tuple.tex
+++ b/docs/latex/classoriginal_1_1tuple.tex
@@ -11,8 +11,7 @@ A fixed-\/size heterogeneous container that stores elements of different types.
 
 
 
-Inheritance diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorpdf
 \end{figure}
 
 
-Collaboration diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
