--- a/docs/latex/classoriginal_1_1tuple.tex
+++ b/docs/latex/classoriginal_1_1tuple.tex
@@ -42,12 +42,10 @@ Collaboration diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorp
 \begin{DoxyCompactList}\small\item\em Move constructor. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{classoriginal_1_1tuple}{tuple}} \& \mbox{\hyperlink{classoriginal_1_1tuple_aa85f1835b02a2c0a1aa1d4e7c2cb7120}{operator=}} (\mbox{\hyperlink{classoriginal_1_1tuple}{tuple}} \&\&other) noexcept
 \begin{DoxyCompactList}\small\item\em Move assignment operator. \end{DoxyCompactList}\item 
-\Hypertarget{classoriginal_1_1tuple_ae409370d982d49d9d8dc3be81f9509ef}\label{classoriginal_1_1tuple_ae409370d982d49d9d8dc3be81f9509ef} 
-{\footnotesize template$<$uint32\+\_\+t IDX$>$ }\\auto {\bfseries get} () const
-\item 
-\Hypertarget{classoriginal_1_1tuple_aa6e1de926f46dba95759f3d643d63df7}\label{classoriginal_1_1tuple_aa6e1de926f46dba95759f3d643d63df7} 
-{\footnotesize template$<$uint32\+\_\+t IDX, typename \mbox{\hyperlink{namespaceoriginal_ad9f68a800f874a16bc6a433ddcf06ed5}{E}}$>$ }\\void {\bfseries set} (const \mbox{\hyperlink{namespaceoriginal_ad9f68a800f874a16bc6a433ddcf06ed5}{E}} \&e)
-\item 
+{\footnotesize template$<$uint32\+\_\+t IDX$>$ }\\auto \mbox{\hyperlink{classoriginal_1_1tuple_ae409370d982d49d9d8dc3be81f9509ef}{get}} () const
+\begin{DoxyCompactList}\small\item\em Get element by index. \end{DoxyCompactList}\item 
+{\footnotesize template$<$uint32\+\_\+t IDX, typename \mbox{\hyperlink{namespaceoriginal_ad9f68a800f874a16bc6a433ddcf06ed5}{E}}$>$ }\\void \mbox{\hyperlink{classoriginal_1_1tuple_aa6e1de926f46dba95759f3d643d63df7}{set}} (const \mbox{\hyperlink{namespaceoriginal_ad9f68a800f874a16bc6a433ddcf06ed5}{E}} \&e)
+\begin{DoxyCompactList}\small\item\em Set element by index. \end{DoxyCompactList}\item 
 int64\+\_\+t \mbox{\hyperlink{classoriginal_1_1tuple_ac10f540df5306e3d1c33d6f5d89d1b36}{compare\+To}} (const \mbox{\hyperlink{classoriginal_1_1tuple}{tuple}} \&other) const override
 \begin{DoxyCompactList}\small\item\em \doxylink{conceptoriginal_1_1_compare}{Compare} two tuples lexicographically. \end{DoxyCompactList}\item 
 std\+::string \mbox{\hyperlink{classoriginal_1_1tuple_a4bdba65409d58fcdbf76fd298a744acf}{to\+String}} (bool enter) const override
@@ -123,7 +121,7 @@ A fixed-\/size heterogeneous container that stores elements of different types.
 This tuple implementation\+:
 \begin{DoxyItemize}
 \item Supports element access via compile-\/time index
-\item Provides element modification via set() method
+\item Provides element modification via \doxylink{classoriginal_1_1tuple_aa6e1de926f46dba95759f3d643d63df7}{set()} method
 \item Implements lexicographical comparison
 \item Supports deep copying and move semantics
 \item Provides type-\/safe element storage 
@@ -239,7 +237,32 @@ Comparison rules\+:
 \item Compares elements pairwise from first to last
 \item Stops at first unequal element pair
 \item Elements must be comparable using \texorpdfstring{$<$}{<} operator 
-\end{DoxyEnumerate}\Hypertarget{classoriginal_1_1tuple_a25f52ab9cb08965a2cef1e4769a4e710}\index{original::tuple$<$ TYPES $>$@{original::tuple$<$ TYPES $>$}!operator=@{operator=}}
+\end{DoxyEnumerate}\Hypertarget{classoriginal_1_1tuple_ae409370d982d49d9d8dc3be81f9509ef}\index{original::tuple$<$ TYPES $>$@{original::tuple$<$ TYPES $>$}!get@{get}}
+\index{get@{get}!original::tuple$<$ TYPES $>$@{original::tuple$<$ TYPES $>$}}
+\doxysubsubsection{\texorpdfstring{get()}{get()}}
+{\footnotesize\ttfamily \label{classoriginal_1_1tuple_ae409370d982d49d9d8dc3be81f9509ef} 
+template$<$typename... TYPES$>$ \\
+template$<$uint32\+\_\+t IDX$>$ \\
+auto \mbox{\hyperlink{classoriginal_1_1tuple}{original\+::tuple}}$<$ TYPES $>$\+::get (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption}) const}
+
+
+
+Get element by index. 
+
+
+\begin{DoxyTemplParams}{Template Parameters}
+{\em IDX} & Zero-\/based index of the element to retrieve \\
+\hline
+\end{DoxyTemplParams}
+\begin{DoxyReturn}{Returns}
+Copy of the element at specified index 
+\end{DoxyReturn}
+
+\begin{DoxyExceptions}{Exceptions}
+{\em \doxylink{classoriginal_1_1out_of_bound_error}{out\+Of\+Bound\+Error}} & If index exceeds tuple size \\
+\hline
+\end{DoxyExceptions}
+\Hypertarget{classoriginal_1_1tuple_a25f52ab9cb08965a2cef1e4769a4e710}\index{original::tuple$<$ TYPES $>$@{original::tuple$<$ TYPES $>$}!operator=@{operator=}}
 \index{operator=@{operator=}!original::tuple$<$ TYPES $>$@{original::tuple$<$ TYPES $>$}}
 \doxysubsubsection{\texorpdfstring{operator=()}{operator=()}\hspace{0.1cm}{\footnotesize\ttfamily [1/2]}}
 {\footnotesize\ttfamily \label{classoriginal_1_1tuple_a25f52ab9cb08965a2cef1e4769a4e710} 
@@ -277,6 +300,37 @@ Move assignment operator.
 \begin{DoxyReturn}{Returns}
 Reference to this tuple 
 \end{DoxyReturn}
+\Hypertarget{classoriginal_1_1tuple_aa6e1de926f46dba95759f3d643d63df7}\index{original::tuple$<$ TYPES $>$@{original::tuple$<$ TYPES $>$}!set@{set}}
+\index{set@{set}!original::tuple$<$ TYPES $>$@{original::tuple$<$ TYPES $>$}}
+\doxysubsubsection{\texorpdfstring{set()}{set()}}
+{\footnotesize\ttfamily \label{classoriginal_1_1tuple_aa6e1de926f46dba95759f3d643d63df7} 
+template$<$typename... TYPES$>$ \\
+template$<$uint32\+\_\+t IDX, typename \mbox{\hyperlink{namespaceoriginal_ad9f68a800f874a16bc6a433ddcf06ed5}{E}}$>$ \\
+void \mbox{\hyperlink{classoriginal_1_1tuple}{original\+::tuple}}$<$ TYPES $>$\+::set (\begin{DoxyParamCaption}\item[{const \mbox{\hyperlink{namespaceoriginal_ad9f68a800f874a16bc6a433ddcf06ed5}{E}} \&}]{e}{}\end{DoxyParamCaption})}
+
+
+
+Set element by index. 
+
+
+\begin{DoxyTemplParams}{Template Parameters}
+{\em IDX} & Zero-\/based index of the element to modify \\
+\hline
+{\em E} & Type of the new value (auto-\/deduced) \\
+\hline
+\end{DoxyTemplParams}
+
+\begin{DoxyParams}{Parameters}
+{\em e} & New value to assign \\
+\hline
+\end{DoxyParams}
+
+\begin{DoxyExceptions}{Exceptions}
+{\em \doxylink{classoriginal_1_1out_of_bound_error}{out\+Of\+Bound\+Error}} & If index exceeds tuple size \\
+\hline
+{\em \doxylink{classoriginal_1_1value_error}{value\+Error}} & If type E is incompatible with target element type \\
+\hline
+\end{DoxyExceptions}
 \Hypertarget{classoriginal_1_1tuple_a4bdba65409d58fcdbf76fd298a744acf}\index{original::tuple$<$ TYPES $>$@{original::tuple$<$ TYPES $>$}!toString@{toString}}
 \index{toString@{toString}!original::tuple$<$ TYPES $>$@{original::tuple$<$ TYPES $>$}}
 \doxysubsubsection{\texorpdfstring{toString()}{toString()}}
