docs: Update docs

--- a/docs/latex/classoriginal_1_1callback_return_type_error.tex
+++ b/docs/latex/classoriginal_1_1callback_return_type_error.tex
@@ -11,8 +11,7 @@ Exception for callback return type mismatch.
 
 
 
-Inheritance diagram for original\+::callback\+Return\+Type\+Error\+:
-\nopagebreak
+Inheritance diagram for original\+::callback\+Return\+Type\+Error\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for original\+::callback\+Return\+Type\+Error\+:
 \end{figure}
 
 
-Collaboration diagram for original\+::callback\+Return\+Type\+Error\+:
-\nopagebreak
+Collaboration diagram for original\+::callback\+Return\+Type\+Error\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
