--- a/docs/latex/classoriginal_1_1out_of_bound_error.tex
+++ b/docs/latex/classoriginal_1_1out_of_bound_error.tex
@@ -11,8 +11,7 @@ Exception for container index out-\/of-\/range errors.
 
 
 
-Inheritance diagram for original\+::out\+Of\+Bound\+Error\+:
-\nopagebreak
+Inheritance diagram for original\+::out\+Of\+Bound\+Error\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for original\+::out\+Of\+Bound\+Error\+:
 \end{figure}
 
 
-Collaboration diagram for original\+::out\+Of\+Bound\+Error\+:
-\nopagebreak
+Collaboration diagram for original\+::out\+Of\+Bound\+Error\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
