--- a/docs/latex/classoriginal_1_1tuple.tex
+++ b/docs/latex/classoriginal_1_1tuple.tex
@@ -11,8 +11,7 @@ A fixed-\/size heterogeneous container that stores elements of different types.
 
 
 
-Inheritance diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorpdf
 \end{figure}
 
 
-Collaboration diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -349,7 +347,7 @@ Set element by index.
 \end{DoxyTemplParams}
 
 \begin{DoxyParams}{Parameters}
-{\em e} & New value to assign \\
+{\em e} & New value to assign The assignment will only succeed if\+: {\ttfamily E} is convertible to the type of the element at the given index ({\ttfamily T}). \\
 \hline
 \end{DoxyParams}
 \Hypertarget{classoriginal_1_1tuple_a9ceacc04c8b622370ea7471febcbf827}\index{original::tuple$<$ TYPES $>$@{original::tuple$<$ TYPES $>$}!size@{size}}
