--- a/docs/latex/classoriginal_1_1error.tex
+++ b/docs/latex/classoriginal_1_1error.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1error}{}\label{classoriginal_1_1error}\index{original::error@{original::error}}
 
 
-Inheritance diagram for original\+::error\+:
-\nopagebreak
+Inheritance diagram for original\+::error\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -12,8 +11,7 @@ Inheritance diagram for original\+::error\+:
 \end{figure}
 
 
-Collaboration diagram for original\+::error\+:
-\nopagebreak
+Collaboration diagram for original\+::error\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
