--- a/docs/latex/classoriginal_1_1null_pointer_error.tex
+++ b/docs/latex/classoriginal_1_1null_pointer_error.tex
@@ -11,8 +11,7 @@ Exception for null pointer dereference attempts.
 
 
 
-Inheritance diagram for original\+::null\+Pointer\+Error\+:
-\nopagebreak
+Inheritance diagram for original\+::null\+Pointer\+Error\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for original\+::null\+Pointer\+Error\+:
 \end{figure}
 
 
-Collaboration diagram for original\+::null\+Pointer\+Error\+:
-\nopagebreak
+Collaboration diagram for original\+::null\+Pointer\+Error\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
