--- a/docs/latex/classoriginal_1_1un_supported_method_error.tex
+++ b/docs/latex/classoriginal_1_1un_supported_method_error.tex
@@ -11,8 +11,7 @@ Exception for unimplemented method calls.
 
 
 
-Inheritance diagram for original\+::un\+Supported\+Method\+Error\+:
-\nopagebreak
+Inheritance diagram for original\+::un\+Supported\+Method\+Error\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for original\+::un\+Supported\+Method\+Error\+:
 \end{figure}
 
 
-Collaboration diagram for original\+::un\+Supported\+Method\+Error\+:
-\nopagebreak
+Collaboration diagram for original\+::un\+Supported\+Method\+Error\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
