docs: Update docs

--- a/docs/latex/classoriginal_1_1tuple.tex
+++ b/docs/latex/classoriginal_1_1tuple.tex
@@ -347,9 +347,12 @@ Set element by index.
 \end{DoxyTemplParams}
 
 \begin{DoxyParams}{Parameters}
-{\em e} & New value to assign The assignment will only succeed if\+: {\ttfamily E} is convertible to the type of the element at the given index ({\ttfamily T}). \\
+{\em e} & New value to assign \\
 \hline
 \end{DoxyParams}
+\begin{DoxyNote}{Note}
+The assignment will only succeed if\+: {\ttfamily E} is convertible to the type of the element at the given index ({\ttfamily T}). 
+\end{DoxyNote}
 \Hypertarget{classoriginal_1_1tuple_a9ceacc04c8b622370ea7471febcbf827}\index{original::tuple$<$ TYPES $>$@{original::tuple$<$ TYPES $>$}!size@{size}}
 \index{size@{size}!original::tuple$<$ TYPES $>$@{original::tuple$<$ TYPES $>$}}
 \doxysubsubsection{\texorpdfstring{size()}{size()}}
