docs: Update docs

--- a/docs/latex/error_8h_source.tex
+++ b/docs/latex/error_8h_source.tex
@@ -102,7 +102,7 @@
 \DoxyCodeLine{00186\ \textcolor{keyword}{template}\ <const\ \textcolor{keywordtype}{bool}\ FALSE\_CONDITION>}
 \DoxyCodeLine{00187\ \textcolor{keyword}{class\ }\mbox{\hyperlink{classoriginal_1_1static_error}{original::staticError}}<\mbox{\hyperlink{namespaceoriginal}{original}}::\mbox{\hyperlink{classoriginal_1_1error}{error}},\ FALSE\_CONDITION>}
 \DoxyCodeLine{00188\ \{}
-\DoxyCodeLine{00189\ \ \ \ \ \textcolor{keyword}{static\_assert}(!FALSE\_CONDITION,\ \textcolor{stringliteral}{"{}A\ static\ assert\ called"{}});}
+\DoxyCodeLine{00189\ \ \ \ \ \textcolor{keyword}{static\_assert}(!FALSE\_CONDITION,\ \textcolor{stringliteral}{"{}A\ static\ assert\ triggered"{}});}
 \DoxyCodeLine{00190\ \};}
 \DoxyCodeLine{00191\ }
 \DoxyCodeLine{00192\ \textcolor{keyword}{template}\ <const\ \textcolor{keywordtype}{bool}\ FALSE\_CONDITION>}
