--- a/docs/latex/classoriginal_1_1error.tex
+++ b/docs/latex/classoriginal_1_1error.tex
@@ -11,8 +11,7 @@ Base interface for all exception types in Original.
 
 
 
-Inheritance diagram for original\+::error\+:
-\nopagebreak
+Inheritance diagram for original\+::error\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for original\+::error\+:
 \end{figure}
 
 
-Collaboration diagram for original\+::error\+:
-\nopagebreak
+Collaboration diagram for original\+::error\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
