docs: Update docs

--- a/docs/latex/tuple_8h_source.tex
+++ b/docs/latex/tuple_8h_source.tex
@@ -120,7 +120,7 @@
 \DoxyCodeLine{00184\ }
 \DoxyCodeLine{00190\ \ \ \ \ \ \ \ \ tuple\&\ \mbox{\hyperlink{classoriginal_1_1tuple_a25f52ab9cb08965a2cef1e4769a4e710}{operator=}}(tuple\&\&\ other)\ \textcolor{keyword}{noexcept};}
 \DoxyCodeLine{00191\ }
-\DoxyCodeLine{00196\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ \textcolor{keyword}{constexpr}\ \mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\_integer}}\ \mbox{\hyperlink{classoriginal_1_1tuple_a95f2b9f3aaad9297b18a8dadd2dfbdd3}{size}}();}
+\DoxyCodeLine{00196\ \ \ \ \ \ \ \ \ \textcolor{keyword}{constexpr}\ \mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\_integer}}\ \mbox{\hyperlink{classoriginal_1_1tuple_a95f2b9f3aaad9297b18a8dadd2dfbdd3}{size}}();}
 \DoxyCodeLine{00197\ }
 \DoxyCodeLine{00203\ \ \ \ \ \ \ \ \ \textcolor{keyword}{template}<u\_\textcolor{keywordtype}{int}eger\ IDX>}
 \DoxyCodeLine{00204\ \ \ \ \ \ \ \ \ \textcolor{keyword}{auto}\ \mbox{\hyperlink{classoriginal_1_1tuple_ae409370d982d49d9d8dc3be81f9509ef}{get}}()\ \textcolor{keyword}{const};}
