--- a/docs/latex/classoriginal_1_1tuple.tex
+++ b/docs/latex/classoriginal_1_1tuple.tex
@@ -11,7 +11,8 @@ A fixed-\/size heterogeneous container that stores elements of different types.
 
 
 
-Inheritance diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorpdfstring{$>$}{>}\+:\nopagebreak
+Inheritance diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -20,7 +21,8 @@ Inheritance diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorpdf
 \end{figure}
 
 
-Collaboration diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorpdfstring{$>$}{>}\+:\nopagebreak
+Collaboration diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -40,6 +42,8 @@ Collaboration diagram for original\+::tuple\texorpdfstring{$<$}{<} TYPES \texorp
 \begin{DoxyCompactList}\small\item\em Move constructor. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{classoriginal_1_1tuple}{tuple}} \& \mbox{\hyperlink{classoriginal_1_1tuple_aa85f1835b02a2c0a1aa1d4e7c2cb7120}{operator=}} (\mbox{\hyperlink{classoriginal_1_1tuple}{tuple}} \&\&other) noexcept
 \begin{DoxyCompactList}\small\item\em Move assignment operator. \end{DoxyCompactList}\item 
+constexpr \mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\+\_\+integer}} \mbox{\hyperlink{classoriginal_1_1tuple_a95f2b9f3aaad9297b18a8dadd2dfbdd3}{size}} ()
+\begin{DoxyCompactList}\small\item\em Get the number of elements in the tuple. \end{DoxyCompactList}\item 
 {\footnotesize template$<$\mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\+\_\+integer}} IDX$>$ }\\auto \mbox{\hyperlink{classoriginal_1_1tuple_ae409370d982d49d9d8dc3be81f9509ef}{get}} () const
 \begin{DoxyCompactList}\small\item\em Get element by index. \end{DoxyCompactList}\item 
 {\footnotesize template$<$\mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\+\_\+integer}} IDX, typename \mbox{\hyperlink{namespaceoriginal_ad9f68a800f874a16bc6a433ddcf06ed5}{E}}$>$ }\\void \mbox{\hyperlink{classoriginal_1_1tuple_aa6e1de926f46dba95759f3d643d63df7}{set}} (const \mbox{\hyperlink{namespaceoriginal_ad9f68a800f874a16bc6a433ddcf06ed5}{E}} \&e)
@@ -91,11 +95,14 @@ bool \mbox{\hyperlink{classoriginal_1_1comparable_a28e05e7b5ee65cd29f3bb6be336de
 \begin{DoxyCompactList}\small\item\em Checks if the current object is greater than or equal to another. \end{DoxyCompactList}\item 
 virtual {\bfseries \texorpdfstring{$\sim$}{\string~}comparable} ()=default
 \begin{DoxyCompactList}\small\item\em Virtual destructor for proper cleanup of derived objects. \end{DoxyCompactList}\end{DoxyCompactItemize}
-\doxysubsubsection*{Static Public Member Functions}
+\doxysubsubsection*{Friends}
 \begin{DoxyCompactItemize}
 \item 
-static constexpr \mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\+\_\+integer}} \mbox{\hyperlink{classoriginal_1_1tuple_a95f2b9f3aaad9297b18a8dadd2dfbdd3}{size}} ()
-\begin{DoxyCompactList}\small\item\em Get the number of elements in the tuple. \end{DoxyCompactList}\end{DoxyCompactItemize}
+{\footnotesize template$<$typename F\+\_\+\+TYPE, typename S\+\_\+\+TYPE$>$ }\\\mbox{\hyperlink{classoriginal_1_1tuple}{tuple}}$<$ F\+\_\+\+TYPE, S\+\_\+\+TYPE $>$ \mbox{\hyperlink{classoriginal_1_1tuple_acf49e19bc49952eaf947d5a5fd5f599f}{make\+Tuple}} (const \mbox{\hyperlink{classoriginal_1_1couple}{couple}}$<$ F\+\_\+\+TYPE, S\+\_\+\+TYPE $>$ \&cp)
+\begin{DoxyCompactList}\small\item\em Create a tuple from a couple. \end{DoxyCompactList}\item 
+{\footnotesize template$<$typename... L\+\_\+\+TYPES, typename... R\+\_\+\+TYPES$>$ }\\\mbox{\hyperlink{classoriginal_1_1tuple}{tuple}}$<$ L\+\_\+\+TYPES..., R\+\_\+\+TYPES... $>$ \mbox{\hyperlink{classoriginal_1_1tuple_a89853440bfa7f2ad554ccfec48e52f86}{operator+}} (const \mbox{\hyperlink{classoriginal_1_1tuple}{tuple}}$<$ L\+\_\+\+TYPES... $>$ \&lt, const \mbox{\hyperlink{classoriginal_1_1tuple}{tuple}}$<$ R\+\_\+\+TYPES... $>$ \&rt)
+\begin{DoxyCompactList}\small\item\em Concatenate two tuples (friend function) \end{DoxyCompactList}\end{DoxyCompactItemize}
+\doxysubsubsection*{Additional Inherited Members}
 \doxysubsection*{Static Public Member Functions inherited from \mbox{\hyperlink{classoriginal_1_1printable}{original\+::printable}}}
 \begin{DoxyCompactItemize}
 \item 
@@ -113,13 +120,6 @@ template$<$$>$ auto {\bfseries format\+String} (const bool \&t) -\/$>$ std\+::st
 \item 
 template$<$$>$ auto {\bfseries format\+String} (const char \texorpdfstring{$\ast$}{*}const \&ptr) -\/$>$ std\+::string
 \end{DoxyCompactItemize}
-\doxysubsubsection*{Friends}
-\begin{DoxyCompactItemize}
-\item 
-{\footnotesize template$<$typename F\+\_\+\+TYPE, typename S\+\_\+\+TYPE$>$ }\\\mbox{\hyperlink{classoriginal_1_1tuple}{tuple}}$<$ F\+\_\+\+TYPE, S\+\_\+\+TYPE $>$ \mbox{\hyperlink{classoriginal_1_1tuple_acf49e19bc49952eaf947d5a5fd5f599f}{make\+Tuple}} (const \mbox{\hyperlink{classoriginal_1_1couple}{couple}}$<$ F\+\_\+\+TYPE, S\+\_\+\+TYPE $>$ \&cp)
-\begin{DoxyCompactList}\small\item\em Create a tuple from a couple. \end{DoxyCompactList}\item 
-{\footnotesize template$<$typename... L\+\_\+\+TYPES, typename... R\+\_\+\+TYPES$>$ }\\\mbox{\hyperlink{classoriginal_1_1tuple}{tuple}}$<$ L\+\_\+\+TYPES..., R\+\_\+\+TYPES... $>$ \mbox{\hyperlink{classoriginal_1_1tuple_a89853440bfa7f2ad554ccfec48e52f86}{operator+}} (const \mbox{\hyperlink{classoriginal_1_1tuple}{tuple}}$<$ L\+\_\+\+TYPES... $>$ \&lt, const \mbox{\hyperlink{classoriginal_1_1tuple}{tuple}}$<$ R\+\_\+\+TYPES... $>$ \&rt)
-\begin{DoxyCompactList}\small\item\em Concatenate two tuples (friend function) \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
@@ -330,7 +330,7 @@ The assignment will only succeed if\+: {\ttfamily E} is convertible to the type 
 \doxysubsubsection{\texorpdfstring{size()}{size()}}
 {\footnotesize\ttfamily \label{classoriginal_1_1tuple_a95f2b9f3aaad9297b18a8dadd2dfbdd3} 
 template$<$typename... TYPES$>$ \\
-\mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{original\+::u\+\_\+integer}} \mbox{\hyperlink{classoriginal_1_1tuple}{original\+::tuple}}$<$ TYPES $>$\+::size (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [static]}, {\ttfamily [constexpr]}}
+\mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{original\+::u\+\_\+integer}} \mbox{\hyperlink{classoriginal_1_1tuple}{original\+::tuple}}$<$ TYPES $>$\+::size (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [constexpr]}}
 
 
 
