--- a/docs/latex/classoriginal_1_1autoPtr.tex
+++ b/docs/latex/classoriginal_1_1autoPtr.tex
@@ -11,8 +11,7 @@ Base smart pointer with reference counting.
 
 
 
-Inheritance diagram for original\+::auto\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::auto\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for original\+::auto\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIV
 \end{figure}
 
 
-Collaboration diagram for original\+::auto\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::auto\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -174,8 +172,7 @@ Provides core resource management capabilities through\+:
 \begin{DoxyItemize}
 \item Strong/weak reference tracking
 \item Automatic cleanup when references reach zero
-\item Custom deletion policies via template parameter
-\item Thread-\/safe reference counting (assuming atomic operations) 
+\item Custom deletion policies via template parameter 
 \end{DoxyItemize}
 
 \doxysubsection{Constructor \& Destructor Documentation}
