--- a/docs/latex/classoriginal_1_1ownerPtr.tex
+++ b/docs/latex/classoriginal_1_1ownerPtr.tex
@@ -11,8 +11,7 @@ Unique ownership smart pointer with move semantics.
 
 
 
-Inheritance diagram for original\+::owner\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::owner\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for original\+::owner\+Ptr\texorpdfstring{$<$}{<} TYPE, DELE
 \end{figure}
 
 
-Collaboration diagram for original\+::owner\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::owner\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
