--- a/docs/latex/classoriginal_1_1refCount.tex
+++ b/docs/latex/classoriginal_1_1refCount.tex
@@ -11,8 +11,7 @@ Reference counting metadata container.
 
 
 
-Collaboration diagram for original\+::ref\+Count\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::ref\+Count\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
