--- a/docs/latex/classoriginal_1_1strongPtr.tex
+++ b/docs/latex/classoriginal_1_1strongPtr.tex
@@ -11,8 +11,7 @@ Shared ownership smart pointer with strong references.
 
 
 
-Inheritance diagram for original\+::strong\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::strong\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for original\+::strong\+Ptr\texorpdfstring{$<$}{<} TYPE, DEL
 \end{figure}
 
 
-Collaboration diagram for original\+::strong\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::strong\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -299,7 +297,7 @@ std\+::string \mbox{\hyperlink{classoriginal_1_1strongPtr}{original\+::strong\+P
 Get class identifier. 
 
 \begin{DoxyReturn}{Returns}
-std\+::string "{}strong\+Ptr"{} 
+Class name of \doxylink{classoriginal_1_1strongPtr}{strong\+Ptr} 
 \end{DoxyReturn}
 
 
