--- a/docs/latex/classoriginal_1_1weakPtr.tex
+++ b/docs/latex/classoriginal_1_1weakPtr.tex
@@ -11,8 +11,7 @@ Non-\/owning reference to shared resource.
 
 
 
-Inheritance diagram for original\+::weak\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::weak\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for original\+::weak\+Ptr\texorpdfstring{$<$}{<} TYPE, DELET
 \end{figure}
 
 
-Collaboration diagram for original\+::weak\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::weak\+Ptr\texorpdfstring{$<$}{<} TYPE, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
