--- a/docs/latex/autoPtr_8h.tex
+++ b/docs/latex/autoPtr_8h.tex
@@ -9,16 +9,14 @@ Base class for reference-\/counted smart pointers.
 {\ttfamily \#include "{}printable.\+h"{}}\newline
 {\ttfamily \#include "{}comparable.\+h"{}}\newline
 {\ttfamily \#include "{}error.\+h"{}}\newline
-Include dependency graph for auto\+Ptr.\+h\+:
-\nopagebreak
+Include dependency graph for auto\+Ptr.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{autoPtr_8h__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
