--- a/docs/latex/classoriginal_1_1refCntPtr.tex
+++ b/docs/latex/classoriginal_1_1refCntPtr.tex
@@ -11,8 +11,7 @@ Base class for reference-\/counted pointers.
 
 
 
-Inheritance diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Inheritance diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, D
 \end{figure}
 
 
-Collaboration diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::ref\+Cnt\+Ptr\texorpdfstring{$<$}{<} TYPE, DERIVED, DELETER \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -216,7 +214,7 @@ std\+::string \mbox{\hyperlink{classoriginal_1_1refCntPtr}{original\+::ref\+Cnt\
 Get class identifier. 
 
 \begin{DoxyReturn}{Returns}
-std\+::string "{}ref\+Cnt\+Ptr"{} 
+Class name of \doxylink{classoriginal_1_1refCntPtr}{ref\+Cnt\+Ptr} 
 \end{DoxyReturn}
 
 
@@ -243,7 +241,7 @@ Formatted string with reference info.
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-std\+::string Contains pointer value and ref counts 
+Contains pointer value and ref counts 
 \end{DoxyReturn}
 
 
